Fix sticky side-nav, 2em padding only on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -85,13 +85,13 @@ body {
 	display: flex;
 	width: 100%;
 	max-width: calc(40em + 200px + 2em);
-	height: 100vh;
+	min-height: 100vh;
 }
 
 main {
 	width: 100%;
 	max-width: 40em;
-	padding: 1em 2em;
+	padding: 1em;
 	transition: margin 0.3s ease; /* Smooth transition for margin change in chat-active state */
 
 	& :first-child {
@@ -108,9 +108,9 @@ h1,
 h2,
 h3,
 .letter {
+	width: fit-content;
 	font-family: "Switzer";
 	text-wrap: balance;
-	width: fit-content;
 }
 
 /* https://www.a11yproject.com/posts/how-to-hide-content/ */
@@ -420,7 +420,7 @@ header {
 	align-items: start;
 	width: 200px;
 	height: 100vh;
-	padding: 1em 2em;
+	padding: 1em;
 
 	&:not(:has(+ .chat-active)) {
 		&:has(.nav-item:nth-child(n):hover) {
@@ -450,7 +450,7 @@ header {
 	display: flex;
 	justify-content: center;
 	width: 100%;
-	padding-right: 2.25em;
+	padding-right: 2em;
 }
 
 .nav-list {
@@ -631,6 +631,7 @@ header {
 	}
 	main {
 		max-width: initial;
+		padding: 1em 2em;
 
 		&:where(.chat-active) {
 			margin-top: 0;
@@ -644,6 +645,7 @@ header {
 		align-items: center;
 		width: initial;
 		height: initial;
+		padding: 1em 2em;
 		padding-bottom: 0;
 		gap: 1em 0.5em;
 	}
@@ -725,8 +727,8 @@ header {
 }
 
 .citation {
-	margin-bottom: 1em;
 	padding-left: 2em;
+	margin-bottom: 1em;
 	text-indent: -2em;
 }
 
